Bug 97978 - Can't connect to mde or accde databases from Base
Summary: Can't connect to mde or accde databases from Base
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.4.6.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.2
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-18 13:35 UTC by pasqual milvaques
Modified: 2016-10-25 19:08 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample databases to test and reproduce the problem (431.83 KB, application/x-7z-compressed)
2016-03-06 19:18 UTC, pasqual milvaques
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pasqual milvaques 2016-02-18 13:35:47 UTC
When using Base on Windows there is the possibility to connect to MS Access (mdb) and MS Access 2007 (accdb) databases but the base wizard doen't permits connecting to MS Access Executable (mde) and MS Access 2007 Executable (accde) databases.

More information about these formats can be found here:
https://en.wikipedia.org/wiki/Microsoft_Access#File_extensions
https://support.office.com/en-us/article/Introduction-to-the-Access-2007-file-format-8cf93630-0b68-4a40-a13c-7528b9f074b6

Both formats can be opened using Microsoft Jet Database Engine so Base really can open them, in fact if you tweak the content.xml file inside an odb to point to the mde (or accde) instead of the mdb you can open the mde in Base

The problem is that the Base wizard doesn't let to choose the bde file for opening, some modifications in the LibreOffice code must be done so mde and accde files can be chosen as Base targets
Comment 1 Robinson Tryon (qubit) 2016-02-18 14:47:18 UTC Comment hidden (obsolete)
Comment 2 jani 2016-02-21 12:54:46 UTC
This is not a easyHack. There are no code pointers and the Keywords do not follow our guidelines.
Comment 3 raal 2016-03-06 13:00:47 UTC
Hello Pasqual,
please attach mdb, mde and accde  files for testing. Thanks
Comment 4 pasqual milvaques 2016-03-06 19:18:17 UTC
Created attachment 123353 [details]
sample databases to test and reproduce the problem
Comment 5 pasqual milvaques 2016-03-06 19:57:04 UTC
I have submitted a patch for this bug, you can take a look to it there:
https://gerrit.libreoffice.org/#/c/22957

to verify that it solves the problem. You can use the testcases that I have uploaded a moment ago to reproduce the problem

Thanks
Comment 6 Commit Notification 2016-03-12 14:42:26 UTC
pasqualm committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a6ca4ec7f55b94e431dd1d520a03e19fe796c4b6

tdf#97978: add support for opening mde and accde files in base

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 raal 2016-03-14 16:24:41 UTC
Patch integrated, closing the bug.
Comment 8 Commit Notification 2016-03-15 15:53:50 UTC
pasqualm committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ebcea9815b634ce19c0180ac4f6d9236f69b1a32&h=libreoffice-5-1

tdf#97978: add support for opening mde and accde files in base

It will be available in 5.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.