tdf#97978: add support for opening mde and accde files in base

This patch modifies the base 'open existing database' wizard so accde and mde files
can be chosen as targets for access and access 2007 databases. Both file types are
the runtime-only equivalents to accdb and mdb files so base can use them in the
same way as does with the former

Change-Id: I5b6002089a2d3c19498ff6e05bae3facc5a4e2d0
Reviewed-on: https://gerrit.libreoffice.org/22957
Reviewed-by: Noel Grandin <noelgrandin@gmail.com>
Tested-by: Noel Grandin <noelgrandin@gmail.com>
Reviewed-on: https://gerrit.libreoffice.org/23178
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: jan iversen <jani@documentfoundation.org>